# agentic-ai-topic-master-paper-

./: .gitignore  LICENSE  README.md
agentic_network/: .dockerignore  .gitignore  main.py  pyproject.toml
agentic_network/src/agentic_network/: agent_graph.py
agentic_network/src/agentic_network/agents/: __init__.py  agent.py  agent_data.py  appointment_agent.py  assistant_agent.py  diagnosis_agent.py  post_processing_agent.py  pre_processing_agent.py  tools_agent.py
agentic_network/src/agentic_network/core/: __init__.py  agent_state.py  appointment_state.py  routes.py
agentic_network/src/agentic_network/helper/: initialize_slots.py
agentic_network/src/agentic_network/routing/: __init__.py  tools_condition.py
agentic_network/src/agentic_network/util/: __init__.py  custom_react_parser.py  tokenizer.py
agentic_network/src/agentic_network/utils/: __init__.py  base_agent.py  base_utils.py  custom_react_agent.py
agentic_network/src/fastapi_server/: __init__.py  assistant_service.py  invoke_body.py  server_controller.py  server_main.py
agentic_network/src/llm/: __init__.py  appointment_llm.py  devices.py  diagnosis_llm.py  llm_client.py  models.py
agentic_network/src/llm/client_types/: __init__.py  llm_client_appointment.py  (+4 more)
agentic_network/src/mcp_client/: __init__.py  appointment_mcp.py  diagnosis_mcp.py  mcp_client.py  test_server.py
agentic_network/test/: test_new_topic_agent.py  test_pre_topic_checker_agent.py  test_topic_change_checker_agent.py  test_topic_master_integration.py
agentic_network/test/benchmark/: gemini_benchmark.py  main_benchmark.py
(+104 files in other folders)
